--- a/views/formularioEditar.handlebars
+++ b/views/formularioEditar.handlebars
@@ -2,33 +2,46 @@
     <div class="container">
         <div class="row">
             <div class="col-6 offset-3">
-                <form action="/editar" method="post" enctype="multipart/form-data">
-                <img src="../imagens/{{produto.imagem}}">
+                <form action="/editar" method="post" enctype="multipart/form-data" class="input-editar">
+                    <div class="img-edit mb-4">
+                        <img src="../imagens/{{produto.imagem}}">
+                    </div>
 
-                <input type="hidden" name="nomeImagem" value="{{produto.imagem}}">
-                <input type="hidden" name="codigo" value="{{produto.codigo}}">
+                    <input type="hidden" name="nomeImagem" value="{{produto.imagem}}">
+                    <input type="hidden" name="codigo" value="{{produto.codigo}}">
 
-                    <input type="text" name="nome" value="{{produto.nome}}" class="form-control" placeholder="Nome do produto">
-                    <input type="number" name="valor" value="{{produto.valor}}" class="form-control" placeholder="Valor do produto">
+                    <div class="mb-2">
+                        <input type="text" name="nome" value="{{produto.nome}}" class="form-control input-box"
+                            placeholder="Serviço">
+                    </div>
 
-
+                    <div class="mb-2">
+                        <input type="number" value="{{produto.valor}}" name="valor" class="form-control input-box"
+                            placeholder="Valor R$">
+                    </div>
 
 
                     <h5>categoria atual - "{{produto.categoria}}"</h5>
 
 
                     {{!-- MENU CATEGORIA --}}
-                    <select name="categoria" value="{{produto.categoria}}" id="select-cat" class="form-control">
-                        <option id="select-cat" value="">Selecione a categoria do produto</option>
-                        <option id="select-cat" value="alimenticio">Alimentício</option>
-                        <option id="select-cat" value="eletronico">Eletrônico</option>
-                        <option id="select-cat" value="vestuario">Vestuário</option>
-                    </select>
+                    <div class=" mp-3 mb-2">
+                        <label for="categoria" class="form-label">Categoria</label>
+                        {{!-- MENU CATEGORIA --}}
+                        <select name="categoria" value="{{produto.categoria}}" id="select-cat" class="form-control">
+                            <option id="select-cat" value="">categoria</option>
+                            <option id="select-cat" value="Feminino">Feminino</option>
+                            <option id="select-cat" value="Marculino">Masculino</option>
+                            <option id="select-cat" value="Infantil">Infantil</option>
+                        </select>
+                    </div>
 
 
+                    <div class="mb-2">
+                        <input type="file" value="" name="imagem" class="form-control input-box" placeholder="Adicione uma imagem da serviço">
+                    </div>
 
-                    <input type="file" name="imagem" class="form-control">
-                    <input type="submit" class="btn btn-primary" value="Alterar">
+                    <input type="submit" class="btn btn-primary mb-3" value="Alterar">
                     <a href="/" class="btn btn-secondary">Cancelar</a>
                 </form>
             </div>
