--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,10 +8,10 @@
     {{!-- css menu --}}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css">
     <link rel="stylesheet" href="/css/estilo.css"> 
+    <link rel="stylesheet" href="/css/registratin.css">
     <title>Example App</title>
 </head>
 <body>
-
     {{>menu}}
     {{{body}}}
     {{>footer}}
