--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,5 +1,5 @@
 <footer class="page-footer font-small special-color-dark pt-4">
-    <div class="footer-copyright text-center py-3">@ 2024 Copyright:
-        <a href="mailto:">frankson.11leal@gmail.com</a>
+    <div class="footer-copyright text-center py-3">@ 2024 Copyright.
+        <a href="mailto:">All rights reserved.</a>
     </div>
 </footer>
