imprtanto fotos de serviços

--- a/views/formularioFun.handlebars
+++ b/views/formularioFun.handlebars
@@ -29,7 +29,7 @@
 
                     <div class="mb-2">
                         <label for="nome" class="form-label">Data de contratação</label>
-                        <input type="date" value="" name="data-contrato" class="form-control input-box" placeholder="Data de contratação...">
+                        <input type="date" value="" name="dataCcontrato" class="form-control input-box" placeholder="Data de contratação...">
                     </div>
 
                     <div class="mb-2">
