--- a/views/formulario.handlebars
+++ b/views/formulario.handlebars
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-6 offset-3">
                 {{>mensagens}}
-                <form action="/cadastrar" method="post" enctype="multipart/form-data" class="input-form">
+                <form action="/cadastrarFuncionario" method="post" enctype="multipart/form-data" class="input-form">
 
                     <h1>Cadastre seu serviço</h1>
 
