--- a/views/partials/menu.handlebars
+++ b/views/partials/menu.handlebars
@@ -28,7 +28,7 @@
                     </a>
 
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Cadastrar funcionário</a></li>
+                        <li><a class="dropdown-item" href="/cadastrarFuncionario">Cadastrar funcionário</a></li>
                         <li><a class="dropdown-item" href="/">Cadastrar Serviço</a></li>
                         <li><a class="dropdown-item" href="#">Usuários</a></li>
                     </ul>
